kubernetes/20-service_and_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-http-service
  namespace: phpapp
spec:
  selector:
    app: phpapp
  ports:
    - port: 80
      targetPort: 80
      name: nginx-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-http-ingress
  namespace: phpapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: info.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-http-service
                port:
                  name: nginx-http
